# TimeTable

./: .gitignore  CLAUDE.md  auth.py  ics_generator.py  pyproject.toml  sheets.py  sync_timetable.py  timetable.ics  timetable_sources.json  utils.py
.github/workflows/: sync.yml
