[project]
name = "timetable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.3.1",
    "icalendar>=6.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "pytz>=2026.1.post1",
]
